<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/ll_item_step"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:gravity="center_vertical"
    android:orientation="horizontal"
    android:paddingBottom="0dp"
    android:paddingLeft="8dp"
    android:paddingRight="8dp"
    android:paddingTop="0dp">

    <TextView
        android:id="@+id/shortDesc"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="8dp"
        android:clickable="true"
        android:foreground="?android:selectableItemBackground"
        android:padding="8dp"
        android:textColor="@android:color/black"
        android:textSize="20sp"
        tools:text="Recipe Introduction" />


</LinearLayout>